Add combined plot of raw and cleaned CO₂ data for time domain analysis

--- a/fft_folder/co2_analysis_notebook.ipynb
+++ b/fft_folder/co2_analysis_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,10 @@
     "plt.ylabel('CO₂ Concentration (ppm)')\n",
     "plt.title('Combined Plot of Raw and Cleaned CO₂ Data')\n",
     "plt.legend()\n",
+    "# Save the plot as an image file\n",
+    "plt.savefig(\"co2_plot.png\", dpi=300)  # Save the plot with 300 DPI resolution\n",
+    "\n",
+    "# Display the plot in the notebook\n",
     "plt.show()\n"
    ]
   }
