--- a/data_presentation.ipynb
+++ b/data_presentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +25,10 @@
     }
    ],
    "source": [
-    "# combined_plot_mount_lua.ipynb\n",
-    "# This notebook analyzes and visualizes CO₂ data using FFT-based techniques from preparation.py module.\n",
+    "\"\"\"\n",
+    " data_presentation.ipynb\n",
+    "This notebook analyzes and visualizes CO₂ data using FFT-based techniques from preparation.py module.\n",
+    "\"\"\"\n",
     "\n",
     "# Importing necessary libraries and the preparation module\n",
     "import preparation\n",
